--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^0.13.5
+  provider: ^6.0.4
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
