--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^0.13.5
+  fl_chart: ^0.55.2
   provider: ^6.0.4
+  tuple: ^2.0.1
   flutter:
     sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
